# tupleinstances

./: LICENSE  README  THMacros.hs  TupleInstances.hs  tupleinstances.cabal
src/Data/Tuple/: Instances.hs  THMacros.hs
