Cabal-Version:       >= 1.2
name:                tupleinstances
version:             0.01
synopsis:            Functor, Applicative and Monad for n-ary tuples.
description:         Functor, Applicative and Monad for n-ary tuples.
category:            Data
license:             BSD3
license-file:        LICENSE
author:              Diego Echeverri
maintainer:          diegoeche@gmail.com
build-depends:       base
build-type:          Simple

source-repository    head
  type:              git
  location:          git://github.com/diegoeche/tupleinstances.git

Library
        hs-source-dirs:         src
        Exposed-modules:        Data.Tuple.Instances
        Other-Modules:          Data.Tuple.THMacros
        ghc-options:            -W
        Build-Depends:          base >= 3, template-haskell == 2.3.0.1
